Fix z-index for dateInputWidget
Class ui-datepicker changed to mw-widget-dateInputWidget-calendar

ERM24958

[4.0.x]

--- a/resources/stylesheets/ext.bluespice.pageformsconnector.less
+++ b/resources/stylesheets/ext.bluespice.pageformsconnector.less
@@ -1,12 +1,9 @@
 body.mediawiki,
 body.mediawiki.x-body {
-	.ui-widget {
-		&.ui-widget-content {
-			&.ui-datepicker {
-				z-index: 5 !important;
-			}
-		}
+	.mw-widget-dateInputWidget-calendar {
+		z-index: 5 !important;
 	}
+
 	.PF_timepicker {
 		z-index: 5 !important;
 	}
